# AbstractProgrammingProject

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
autograd/core/: autograd.h  concepts.h  constants.h  context.h  graph.h
autograd/real/: activations.h  functions.h  trigonometric.h
test/: test_errors.cpp  test_grad_complex.cpp  test_grad_simple.cpp  test_miscelanous.cpp  test_requires_grad.cpp
